Throw mud at wall, see what sticks.

--- a/.github/workflows/cibuildwheel.yml
+++ b/.github/workflows/cibuildwheel.yml
@@ -13,6 +13,7 @@ jobs:
       # macOS specific
       CIBW_ARCHS_MACOS: "universal2"
       CIBW_ENVIRONMENT_MACOS: MACOSX_DEPLOYMENT_TARGET='10.9' CMAKE_OSX_ARCHITECTURES='x86_64;arm64'
+      CIBW_ENVIRONMENT: PIP_USE_DEPRECATED=out-of-tree-build
 
     name: Build wheels on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
