Skip cp36-win32 based on a hunch that it's some state problem
Maybe the libs for 32-bit arch are getting used by mistake on the 64-bit
build.  Now cp36-amc64 should work, and the next build should fail.

Probably nothing will ever work though.

--- a/.github/workflows/cibuildwheel.yml
+++ b/.github/workflows/cibuildwheel.yml
@@ -6,7 +6,7 @@ jobs:
   build_wheels:
     env:
       # CIBW_BUILD: "cp39-* cp310-*"
-      CIBW_SKIP: "cp27-* cp35-* pp27-* pp36-win32 pp36-macosx_x86_64"
+      CIBW_SKIP: "cp27-* cp35-* pp27-* pp36-win32 pp36-macosx_x86_64 cp36-win32"
       CIBW_TEST_REQUIRES: pytest pytest-trio pytest-asyncio trio curio pytest-curio
       CIBW_TEST_COMMAND: pytest -v {project}/test
 
