--- a/.github/workflows/cibuildwheel.yml
+++ b/.github/workflows/cibuildwheel.yml
@@ -9,6 +9,7 @@ jobs:
       CIBW_SKIP: "cp27-* cp35-* pp27-* pp36-win32 pp36-macosx_x86_64 cp36-win32"
       CIBW_TEST_REQUIRES: pytest pytest-trio pytest-asyncio trio curio pytest-curio
       CIBW_TEST_COMMAND: pytest -v {project}/test
+      CIBW_BEFORE_BUILD_WINDOWS: bash .github/rmstuff.sh
 
       # macOS specific
       CIBW_ARCHS_MACOS: "universal2"
