--- a/.github/workflows/cibuildwheel.yml
+++ b/.github/workflows/cibuildwheel.yml
@@ -6,7 +6,7 @@ jobs:
   build_wheels:
     env:
       # CIBW_BUILD: "cp39-* cp310-*"
-      CIBW_SKIP: "cp27-* cp35-* pp27-* pp36-win32 pp36-macosx_x86_64 cp36-win32"
+      CIBW_SKIP: "cp27-* cp35-* pp27-* pp36-win32 pp36-macosx_x86_64"
       CIBW_TEST_REQUIRES: pytest pytest-trio pytest-asyncio trio curio pytest-curio
       CIBW_TEST_COMMAND: pytest -v {project}/test
       CIBW_BEFORE_BUILD_WINDOWS: bash .github/rmstuff.sh
@@ -35,7 +35,7 @@ jobs:
           python -m pip install -U pip
 
       - name: Install cibuildwheel
-        run: python -m pip install cibuildwheel==2.3.0
+        run: python -m pip install cibuildwheel==2.11.2
 
       - name: Build wheels
         run: python -m cibuildwheel --output-dir wheelhouse
